Firefox panel wrap bugfix
Fixed a bug that caused the third simulation panel to wrap when viewing in firefox

--- a/Simulation.css
+++ b/Simulation.css
@@ -24,7 +24,7 @@ button {padding: 1px 4px;}
   margin: 0px auto;
 }
 
-#main {overflow: auto;}
+#main {overflow: hidden;}
 
 #header {
   height: 20px;
@@ -45,7 +45,7 @@ button {padding: 1px 4px;}
 
 #chartPanel {
   width: 450px;
-  overflow: auto;
+  overflow: hidden;
 }
 
 #chartPanel #plotArea {
